<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:paddingBottom="200px"
        android:rowCount="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvCrimeLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            android:elevation="60dp"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:id="@+id/llCrimeLocation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="18dp">

                <ImageView
                    android:id="@+id/ivCrimeLocation"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/cdCrimeLocation"
                    android:src="@drawable/ic_crime_location" />

                <TextView
                    android:id="@+id/tvLandingCrimeLocation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12dp"
                    android:text="@string/tvCrimeByLocation"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvCrimeForce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="2"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            android:elevation="60dp"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:id="@+id/llCrimeForce"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/ivCrimeForce"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/cdCrimeForce"
                    android:src="@drawable/ic_crime_force" />

                <TextView
                    android:id="@+id/tvLandingCrimeForce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/tvCrimeByForce"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvNearestStation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowSpan="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            android:elevation="60dp"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:id="@+id/llNearestStation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/ivNearestStation"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/cdStation"
                    android:src="@drawable/ic_station" />

                <TextView
                    android:id="@+id/tvLandingNearestStation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/tvNearestStation"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPoliceForce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            android:elevation="60dp"
            app:cardCornerRadius="12dp">


            <LinearLayout
                android:id="@+id/llForce"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/ivPoliceForce"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/cdForce"
                    android:src="@drawable/ic_policeman" />

                <TextView
                    android:id="@+id/tvLandingPoliceForce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/tvPoliceForce"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>
</ScrollView>